# Fake_News_Detector

./: README.md  pyproject.toml
model/: fake_news.py
static/: index.html  script.js  style.css
