[project]
name = "fake-news-detection"
version = "0.1.0"
description = "Multi-agent Fake News Detection using LangGraph, LangChain, Groq, FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]
